<resources>
    <string name="app_name">HomeWork3.1</string>
    <string name="text_main_title">Вход</string>
    <string name="text_main_weicome">Добро пожаловать</string>
    <string name="text_main_welcome">Добро пожаловать</string>
    <string name="text_main_des">Выполните вход или зарегистрируйтесь.</string>
    <string name="text_enter_email">"Введите вашу почту "</string>
    <string name="text_main_sos">Забыли пароль?</string>
    <string name="text_main_press">Нажмите сюда</string>
    <string name="text_main_ww">Ввидите цифру</string>

    />
</resources>