<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_bac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/photo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="164dp"
        android:layout_marginTop="50dp"
        android:text="@string/text_main_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/jpeg"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="38sp"
        android:src="@drawable/photo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="164dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_main_welcome"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jpeg" />

    <TextView
        android:id="@+id/title_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="164dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_main_des"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_welcome" />


    <EditText
        android:id="@+id/button"
        style="@style/main_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Введите вашу почту"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_des" />

    <EditText
        android:id="@+id/bottom1"
        style="@style/main_edit_text"
        android:hint="Введите ваш пароль"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
         />

    <Button
        android:id="@+id/bottom3"
        style="@style/main_edit_text"
        android:text="Войти"
        android:background="@drawable/baton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom1"
       />
    <LinearLayout
        android:id="@+id/txt_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom3"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/title_sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main_sos"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/title_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main_press"
            android:textColor="@color/purple_500"
            android:layout_marginStart="15dp"
            />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>